# english-learner-bot

./: LICENSE  README.md  init_db.py  main.py  pyproject.toml
bot/: __init__.py  bot.py  config.py
bot/core/: dictionary.py  parsers.py  sessions.py
bot/handlers/: __init__.py  handlers.py  inline_handlers.py
bot/keyboards/: __init__.py  inline_kbs.py
database/: __init__.py  config.py  database_config.py  models.py
fsm/: __init__.py  question_fsm.py
services/: __init__.py
services/searched_words_reminder/: __init__.py  reminder.py
